@@ -7958,6 +7958,17 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+name|String
+name|collectionName
+init|=
+name|cd
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|getCollectionName
+argument_list|()
+decl_stmt|;
 name|DocCollection
 name|collection
 init|=
@@ -7968,51 +7979,31 @@ argument_list|()
 operator|.
 name|getCollectionOrNull
 argument_list|(
-name|cd
-operator|.
-name|getCloudDescriptor
-argument_list|()
-operator|.
-name|getCollectionName
-argument_list|()
+name|collectionName
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|collection
-operator|!=
-literal|null
-condition|)
-block|{
 name|log
 operator|.
 name|info
 argument_list|(
+name|collection
+operator|==
+literal|null
+condition|?
+literal|"Collection {} not visible yet, but flagging it so a watch is registered when it becomes visible"
+else|:
 literal|"Registering watch for collection {}"
 argument_list|,
-name|cd
-operator|.
-name|getCloudDescriptor
-argument_list|()
-operator|.
-name|getCollectionName
-argument_list|()
+name|collectionName
 argument_list|)
 expr_stmt|;
 name|zkStateReader
 operator|.
 name|addCollectionWatch
 argument_list|(
-name|cd
-operator|.
-name|getCloudDescriptor
-argument_list|()
-operator|.
-name|getCollectionName
-argument_list|()
+name|collectionName
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
