@@ -135,6 +135,21 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ClusterState
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|DocCollection
 import|;
 end_import
@@ -1121,6 +1136,367 @@ literal|"c1"
 argument_list|)
 operator|.
 name|isLazilyLoaded
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|zkClient
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|testWatchedCollectionCreation
+specifier|public
+name|void
+name|testWatchedCollectionCreation
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|zkDir
+init|=
+name|createTempDir
+argument_list|(
+literal|"testWatchedCollectionCreation"
+argument_list|)
+operator|.
+name|toFile
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+decl_stmt|;
+name|ZkTestServer
+name|server
+init|=
+operator|new
+name|ZkTestServer
+argument_list|(
+name|zkDir
+argument_list|)
+decl_stmt|;
+name|SolrZkClient
+name|zkClient
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|server
+operator|.
+name|run
+argument_list|()
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|tryCleanSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|AbstractZkTestCase
+operator|.
+name|makeSolrZkNode
+argument_list|(
+name|server
+operator|.
+name|getZkHost
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|zkClient
+operator|=
+operator|new
+name|SolrZkClient
+argument_list|(
+name|server
+operator|.
+name|getZkAddress
+argument_list|()
+argument_list|,
+name|OverseerTest
+operator|.
+name|DEFAULT_CONNECTION_TIMEOUT
+argument_list|)
+expr_stmt|;
+name|ZkController
+operator|.
+name|createClusterZkNodes
+argument_list|(
+name|zkClient
+argument_list|)
+expr_stmt|;
+name|ZkStateReader
+name|reader
+init|=
+operator|new
+name|ZkStateReader
+argument_list|(
+name|zkClient
+argument_list|)
+decl_stmt|;
+name|reader
+operator|.
+name|createClusterStateWatchersAndUpdate
+argument_list|()
+expr_stmt|;
+name|reader
+operator|.
+name|addCollectionWatch
+argument_list|(
+literal|"c1"
+argument_list|)
+expr_stmt|;
+comment|// Initially there should be no c1 collection.
+name|assertNull
+argument_list|(
+name|reader
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollectionRef
+argument_list|(
+literal|"c1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|zkClient
+operator|.
+name|makePath
+argument_list|(
+name|ZkStateReader
+operator|.
+name|COLLECTIONS_ZKNODE
+operator|+
+literal|"/c1"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|forceUpdateCollection
+argument_list|(
+literal|"c1"
+argument_list|)
+expr_stmt|;
+comment|// Still no c1 collection, despite a collection path.
+name|assertNull
+argument_list|(
+name|reader
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollectionRef
+argument_list|(
+literal|"c1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ZkStateWriter
+name|writer
+init|=
+operator|new
+name|ZkStateWriter
+argument_list|(
+name|reader
+argument_list|,
+operator|new
+name|Overseer
+operator|.
+name|Stats
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|// create new collection with stateFormat = 2
+name|DocCollection
+name|state
+init|=
+operator|new
+name|DocCollection
+argument_list|(
+literal|"c1"
+argument_list|,
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Slice
+argument_list|>
+argument_list|()
+argument_list|,
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|()
+argument_list|,
+name|DocRouter
+operator|.
+name|DEFAULT
+argument_list|,
+literal|0
+argument_list|,
+name|ZkStateReader
+operator|.
+name|CLUSTER_STATE
+operator|+
+literal|"/c1/state.json"
+argument_list|)
+decl_stmt|;
+name|ZkWriteCommand
+name|wc
+init|=
+operator|new
+name|ZkWriteCommand
+argument_list|(
+literal|"c1"
+argument_list|,
+name|state
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|enqueueUpdate
+argument_list|(
+name|reader
+operator|.
+name|getClusterState
+argument_list|()
+argument_list|,
+name|wc
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|writePendingUpdates
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+name|ZkStateReader
+operator|.
+name|COLLECTIONS_ZKNODE
+operator|+
+literal|"/c1/state.json"
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|//reader.forceUpdateCollection("c1");
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|50
+argument_list|)
+expr_stmt|;
+name|ClusterState
+operator|.
+name|CollectionRef
+name|ref
+init|=
+name|reader
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollectionRef
+argument_list|(
+literal|"c1"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|ref
+operator|!=
+literal|null
+condition|)
+block|{
+break|break;
+block|}
+block|}
+name|ClusterState
+operator|.
+name|CollectionRef
+name|ref
+init|=
+name|reader
+operator|.
+name|getClusterState
+argument_list|()
+operator|.
+name|getCollectionRef
+argument_list|(
+literal|"c1"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|ref
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|ref
+operator|.
+name|isLazilyLoaded
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|ref
+operator|.
+name|get
+argument_list|()
+operator|.
+name|getStateFormat
 argument_list|()
 argument_list|)
 expr_stmt|;
