@@ -2487,47 +2487,6 @@ argument_list|(
 name|legacyCollectionStates
 argument_list|)
 decl_stmt|;
-comment|// Are there any interesting collections that disappeared from the legacy cluster state?
-for|for
-control|(
-name|String
-name|coll
-range|:
-name|interestingCollections
-control|)
-block|{
-if|if
-condition|(
-operator|!
-name|result
-operator|.
-name|containsKey
-argument_list|(
-name|coll
-argument_list|)
-operator|&&
-operator|!
-name|watchedCollectionStates
-operator|.
-name|containsKey
-argument_list|(
-name|coll
-argument_list|)
-condition|)
-block|{
-operator|new
-name|StateWatcher
-argument_list|(
-name|coll
-argument_list|)
-operator|.
-name|refreshAndWatch
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 comment|// Add state format2 collections, but don't override legacy collection states.
 for|for
 control|(
@@ -5766,6 +5725,11 @@ argument_list|(
 name|coll
 argument_list|)
 decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
 try|try
 block|{
 name|Stat
@@ -5853,9 +5817,44 @@ name|NoNodeException
 name|e
 parameter_list|)
 block|{
+if|if
+condition|(
+name|watcher
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// Leave an exists watch in place in case a state.json is created later.
+name|Stat
+name|exists
+init|=
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+name|collectionPath
+argument_list|,
+name|watcher
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|exists
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// Rare race condition, we tried to fetch the data and couldn't find it, then we found it exists.
+comment|// Loop and try again.
+continue|continue;
+block|}
+block|}
 return|return
 literal|null
 return|;
+block|}
 block|}
 block|}
 DECL|method|getCollectionPath
